num_enum/tests/try_build/nightly/compile_fail/multiple_catch_all.stderr
error: Multiple variants marked with `#[num_enum(catch_all)]`
 --> tests/try_build/nightly/compile_fail/multiple_catch_all.rs:8:16
  |
8 |     #[num_enum(catch_all)]
  |                ^^^^^^^^^
